<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JPG Dump Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="picture_container_grid_display">The thumbnail for a picture</string>
    <string name="full_size_picture">The full sized picture</string>
    <string name="no_internet_dialog_title">No Internet Connection</string>
    <string name="no_internet_dialog_message">This device currently lacks an internet connection.  Please connect and try again.</string>
    <string name="no_internet_dialog_positive">Retry</string>
    <string name="no_internet_dialog_negative">Cancel</string>
    <string name="comment_reference">Referenced Comment:</string>
    <string name="comment_not_found">Comment Not Found</string>
    <string name="comment_not_found_message">The referenced comment could not be found. :(</string>
    <string name="picture_referenced">Referenced Picture:</string>
    <string name="picture_not_found">Picture Not Found</string>
    <string name="picture_not_found_message">The referenced picture could not be found. :(</string>
    <string name="weak">Weak</string>
    <string name="peak">Peak</string>
    <string name="refresh">Refresh</string>
    <string name="settings_dialog_title">So about those settings</string>
    <string name="settings_dialog_message">Hey, so, there aren\'t any settings, yet.  If there\'s a particular setting you\'d like to see, email me at rfserverstudios@gmail.com and I\'ll see what I can do!</string>
    <string name="okay_button">Okay</string>
    <string name="button_content_description">This is a weak or peak button</string>
    <string name="comment_hint">Add your own comment</string>
    <string name="submit">Submit</string>
    <string name="approved_tags_label">Tags</string>
    <string name="unapproved_tags_label">Suggested Tags</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="cancel">Cancel</string>
    <string name="existing_picture">Existing Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="tags_text">Tags\n(Press a submitted tag to erase it)</string>
    <string name="tag_hint">Add Tags</string>
    <string name="image_preview">Image preview</string>
    <string name="enough_tags">That\'s enough tags for now</string>
    <string name="tag_your_stuff">A picture must have at least 1 tag</string>
    <string name="error_making_picture">There was an error making space for your picture</string>
    <string name="no_comments">This post has no comments</string>
    <string name="add">Add</string>
    <string name="so_long_folks">JPG Dump is no more</string>
    <string name="farewell_body">If you are receiving this message, JPG Dump has been taken down.  Due to circumstances beyond my control, the site owner has decided that he no longer wishes to maintain the site.  This message is here to basically serve as a courtesy that this app is now obsolete.  It will be taken down from the Play Store within the next week or so.  It was a pleasure developing the app and maybe someday in the future JPG Dump will set sail again.</string>
    
    <!-- Response Code responses -->
    <string name="code200vote">Vote submitted</string>
    <string name="code401vote">There\'s something wrong with your session</string>
    <string name="code403vote">You can\'t vote more than once</string>
    <string name="code200comment">Comment submitted</string>
    <string name="code400comment">You cannot submit an empty comment</string>
    <string name="code401comment">There\'s something wrong with your session</string>
    <string name="code403comment">You can\'t reply to your own comment</string>
    <string name="codeWTF">I have no idea what the hell you did</string>
    
    
    
    <!-- Settings -->
    <string name="pref_nsfw">NSFW</string>
    <string name="pref_nsfw_summ">Allow unmoderated and NSFW images</string>
    
    <string name="title_activity_preferences">Settings</string>
    <string name="comments">Comments</string>
    <string name="picture_info">Picture Properties</string>
    <string name="picture_information">Properties</string>
    <string name="picture_tags">Tags</string>
    <string name="picture_suggest_tags">Suggest Tags</string>

</resources>
