<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/tags_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/tags_text"/>
    
    <LinearLayout
        android:id="@+id/tags_text_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"/>
    
    <LinearLayout 
        android:id="@+id/tag_submission"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        
        <EditText
	        android:id="@+id/tag_text_field"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="3"
	        android:inputType="text"
	        android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
	        android:hint="@string/tag_hint" />
        
        <Button
            android:id="@+id/tag_submit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/add" />
        
    </LinearLayout>

</LinearLayout>
