<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/picture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#FFFFFFFF"/>
    
    <WebView
        android:id="@+id/full_size_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:layout_gravity="center"
        android:gravity="center"
        android:contentDescription="@string/full_size_picture"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/weak_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/weak"
            android:textSize="20sp"
            android:textColor="#FFFF0013"/>
        
        <TextView
            android:id="@+id/goat_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"/>
        
        <Button
            android:id="@+id/peak_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/peak"
            android:textSize="20sp"
            android:textColor="#FF00FF00"/>
        
    </LinearLayout>

</LinearLayout>
